[gd_scene load_steps=8 format=3 uid="uid://8qk0jwpe1op4"]

[ext_resource type="StyleBox" uid="uid://by13pr7qwxvwc" path="res://resources/PanelsStyle.tres" id="1_ovcsr"]
[ext_resource type="Script" path="res://PauseScreen.gd" id="1_vn056"]
[ext_resource type="FontFile" uid="uid://durkid6h8al5f" path="res://assets/fonts/joystix/joystix monospace.otf" id="3_le72b"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="4_0b7m7"]
[ext_resource type="Theme" uid="uid://tj0abbu7snmi" path="res://resources/StartingMenu.tres" id="5_gbt58"]

[sub_resource type="Theme" id="Theme_bkyqa"]

[sub_resource type="Theme" id="Theme_tls3a"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_bkyqa")
theme_override_styles/panel = ExtResource("1_ovcsr")
script = ExtResource("1_vn056")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Continue"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Exit"

[node name="Settings" type="Control" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("4_0b7m7")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -190.0
offset_right = 249.5
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_gbt58")
theme_override_styles/panel = ExtResource("1_ovcsr")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Global" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GlobalLabel" type="Label" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Global"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Global Volume"

[node name="GlobalSlider" type="HSlider" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Global"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Music" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Music"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="SFX" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Menu" type="VBoxContainer" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuLabel" type="Label" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_le72b")
text = "Menu Sounds Volume"

[node name="MenuSlider" type="HSlider" parent="MarginContainer/Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Back" type="Button" parent="MarginContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_tls3a")
theme_override_fonts/font = ExtResource("3_le72b")
text = "Back"
